dopasowanie kadu do iconmanagera
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1777 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -52,3 +52,11 @@ Mobile=mobile.png
 ResendUserlist=reload.png
 Mute=mute.png
 Unmute=unmute.png
+SendSms=mobile.png
+SendFile=filesave.png
+SendPublicKey=encrypted.png
+RemoveFromUserlist=remove.png
+ClearHistory=eraser.png
+OpenFile=fileopen.png
+AddToNotifyList=forward.png
+RemoveFromNotifyList=back.png
