--- a/.config
+++ b/.config
@@ -6,6 +6,15 @@
 # n - no, module disabled
 #
 
+
+# General sound support for Kadu
 module_sound=m
+
+# External application sound support
+module_ext_sound=m
+
+# Echo sample module
 module_echo=m
+
+# Autoresponder sample module
 module_autoresponder=m
