modul arts_sound
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1788 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -13,6 +13,9 @@ module_sound=m
 # External application sound support
 module_ext_sound=m
 
+# Arts sound server support
+module_arts_sound=n
+
 # Echo sample module
 module_echo=m
 
