dsp_sound, esd_sound, nas_sound
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1789 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -13,8 +13,17 @@ module_sound=m
 # External application sound support
 module_ext_sound=m
 
+# Direct /dev/dsp sound support
+module_dsp_sound=n
+
 # Arts sound server support
 module_arts_sound=n
+
+# ESD sound server support
+module_esd_sound=n
+
+# Network Audio System support
+module_nas_sound=n
 
 # Echo sample module
 module_echo=m
