szyfrowanie do modulu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1793 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -6,6 +6,8 @@
 # n - no, module disabled
 #
 
+# OpenSSL encrypted chat support
+module_encrypting=m
 
 # General sound support for Kadu
 module_sound=m
