speech domyslnie wylaczony
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1818 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -9,7 +9,10 @@
 # OpenSSL encrypted chat support
 module_encryption=m
 
-# General sound support for Kadu
+# Speech synthesis support
+module_speech=n
+
+# General sound support
 module_sound=m
 
 # External application sound support
