autoresponder i echo  domyslnie wylaczone
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1819 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -31,7 +31,7 @@ module_esd_sound=n
 module_nas_sound=n
 
 # Echo sample module
-module_echo=m
+module_echo=n
 
 # Autoresponder sample module
-module_autoresponder=m
+module_autoresponder=n
