--- a/varia/Makefile.in
+++ b/varia/Makefile.in
@@ -102,7 +102,7 @@ shared_modules = @shared_modules@
 static_modules = @static_modules@
 subdir = varia
 mkinstalldirs = $(SHELL) $(top_srcdir)/admin/mkinstalldirs
-CONFIG_HEADER = $(top_builddir)/config.h
+CONFIG_HEADER = $(top_builddir)/kadu-config.h
 CONFIG_CLEAN_FILES =
 DIST_SOURCES =
 DIST_COMMON = Makefile.am Makefile.in
