instalacja naglowkow modulow
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1864 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -306,6 +306,7 @@ install-data-local:
 	done
 
 uninstall-local:
+	rm -f "$(DESTDIR)/$(includedir)/kadu/modules/*.h"
 	rm -f $(DESTDIR)/$(datadir)/kadu/modules/*.so
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
