--- a/Makefile.in
+++ b/Makefile.in
@@ -448,6 +448,8 @@ uninstall-info: uninstall-info-recursive
 
 
 install-data-local:
+	$(mkinstalldirs) "$(DESTDIR)/$(includedir)/kadu/"
+	$(INSTALL_DATA) kadu-config.h "$(DESTDIR)/$(includedir)/kadu/"
 	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/"	
 	$(INSTALL_DATA) AUTHORS "$(DESTDIR)/$(datadir)/kadu/"
 	$(INSTALL_DATA) ChangeLog "$(DESTDIR)/$(datadir)/kadu/"
@@ -466,6 +468,7 @@ install-data-local:
 	@echo
 
 uninstall-local:
+	rm -f "$(DESTDIR)/$(includedir)/kadu/kadu-config.h"
 	rm -f "$(DESTDIR)/$(datadir)/kadu/*"
 	rm -f "$(DESTDIR)/$(datadir)/kadu/themes/emoticons/gadu-gadu/1"/*
 	rm -f "$(DESTDIR)/$(datadir)/kadu/themes/emoticons/gadu-gadu/2"/*
