--- a/kadu-config.h.in
+++ b/kadu-config.h.in
@@ -114,6 +114,9 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
+/* List of modules compiled-in into Kadu binary */
+#undef STATIC_MODULES
+
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
