linkowanie .a modulow statycznych do kadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1872 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -54,8 +54,16 @@ VOICE_OBJS =
 endif
 
 INCLUDES = $(XFREE_INCLUDES) $(QT_INCLUDES) $(OPENSSL_INCLUDES) $(GSM_INCLUDES) $(GADU_INCLUDES)
-kadu_LDADD = $(MODULES_OBJS) $(VOICE_OBJS) $(PTHREAD_LIBS) $(PNG_LIBS) $(QT_LIBS) $(GSM_LIBS) $(GADU_LIBS)
-kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(MODULES_LDFLAGS) $(OPENSSL_LIBS)
+
+kadu_LDADD = \
+$(MODULES_OBJS) $(VOICE_OBJS) $(PTHREAD_LIBS) $(PNG_LIBS) \
+$(QT_LIBS) $(GSM_LIBS) $(GADU_LIBS) \
+$(foreach mod,$(basename $(static_modules)),../modules/$(mod)/$(mod).a)
+
+kadu_LDFLAGS = \
+$(PTHREAD_LDFLAGS) $(MODULES_LDFLAGS) $(OPENSSL_LIBS) \
+$(static_modules_ldflags)
+
 kadu_DEPENDENCIES = $(MODULES_OBJS) $(VOICE_OBJS)
 
 AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT
