--- a/Makefile.in
+++ b/Makefile.in
@@ -100,6 +100,7 @@ am__quote = @am__quote@
 install_sh = @install_sh@
 shared_modules = @shared_modules@
 static_modules = @static_modules@
+static_modules_ldflags = @static_modules_ldflags@
 
 SUBDIRS = @MY_SUBDIRS@
 
