--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -317,6 +317,7 @@ install-data-local:
 	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/modules/translations"
 	@for dir in $(static_modules) $(shared_modules); do \
 		echo -e "\033[32m>>>\033[0m Installing $$dir module ..."; \
+		$(INSTALL_DATA) $$dir/$$dir.desc "$(DESTDIR)/$(datadir)/kadu/modules"; \
 		$(INSTALL_DATA) $$dir/*.h "$(DESTDIR)/$(includedir)/kadu/modules"; \
 		if test -d $$dir/translations; then \
 			$(INSTALL_DATA) $$dir/translations/*.qm "$(DESTDIR)/$(datadir)/kadu/modules/translations/"; \
@@ -328,7 +329,9 @@ install-data-local:
 
 uninstall-local:
 	rm -f "$(DESTDIR)/$(includedir)/kadu/modules/*.h"
+	rm -f $(DESTDIR)/$(datadir)/kadu/modules/*.desc
 	rm -f $(DESTDIR)/$(datadir)/kadu/modules/*.so
+	rm -f $(DESTDIR)/$(datadir)/kadu/modules/translations/*.qm
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
