--- a/.config
+++ b/.config
@@ -30,6 +30,12 @@ module_esd_sound=n
 # Network Audio System support
 module_nas_sound=n
 
+# SMS module
+module_sms=m
+
+# default gateways for SMS module
+module_default_sms=m
+
 # Echo sample module
 module_echo=n
 
