autoaway do modułu + porządki
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1949 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -10,7 +10,7 @@
 module_encryption=m
 
 # Speech synthesis support
-module_speech=n
+module_speech=m
 
 # General sound support
 module_sound=m
@@ -19,22 +19,25 @@ module_sound=m
 module_ext_sound=m
 
 # Direct /dev/dsp sound support
-module_dsp_sound=n
+module_dsp_sound=m
 
 # Arts sound server support
-module_arts_sound=n
+module_arts_sound=m
 
 # ESD sound server support
-module_esd_sound=n
+module_esd_sound=m
 
 # Network Audio System support
-module_nas_sound=n
+module_nas_sound=m
 
 # SMS module
 module_sms=m
 
 # default gateways for SMS module
 module_default_sms=m
+
+# Auto away module
+module_autoaway=m
 
 # Echo sample module
 module_echo=n
